ログイン周りを修正

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,4 +5,5 @@
   <% @books.each do |book| %>
     <li><a href="/books/<%= book.id %>"><%= book.title %></a></li>
   <% end %>
+  <%= button_to "ログアウト",{controller: 'sessions', action: 'destroy'}, method: :delete %>
 </ul>
