タイトル変更

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,4 +1,4 @@
-<h1>todo</h1>
+<h1>Booksapp</h1>
 <a href="/books">Return</a>
 <%= link_to "Add", new_book_path %>
 <%= form_with model: @book do |form| %>
