--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<h1>todo</h1>
+<h1>Booksapp</h1>
 <a href="/books">Return</a>
 <div>Title: <%= @book.title %></div>
 <div>Author: <%= @book.author %></div>
