--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Booksapp</h1>
-<a href="/">Return</a><br>
+<a href="/login">戻る</a><br>
 <a href="/books/new">新規登録</a>
 <ul>
   <% @books.each do |book| %>
