--- a/app/views/users/input.html.erb
+++ b/app/views/users/input.html.erb
@@ -1,5 +1,5 @@
 <h1>ユーザー登録</h1>
-
+<%= link_to "ログインはこちらから", "/login" %>
 <%= form_with model: @user, url: signup_path, local: true do |form| %>
   <% if @user.errors.any? %>
     <strong><%= @user.errors.count %>個のエラーがあります。</strong>
