検索機能バグ修正

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -30,7 +30,8 @@
         <li><%= item.isbn %></li>
         <li><%= item.title %></li>
         <li><%= item.author %></li>
-        <li><%= item.item_price %></li>
+        <li><%= item.item_caption %></li>
+        <li><%= item.item_price %>円</li>
         <li><%= link_to "商品リンク", item.item_url %></li>
       </ul>
     </div>
