--- a/app/views/users/input.html.erb
+++ b/app/views/users/input.html.erb
@@ -11,10 +11,10 @@
   <% end %>
 
   <%= form.label :email, 'メールアドレス' %>
-  <%= form.email_field :email %>
+  <%= form.email_field :email %><br>
 
   <%= form.label :password, 'パスワード' %>
-  <%= form.password_field :password %>
+  <%= form.password_field :password %><br>
 
   <%= form.label :password_confirmation, 'パスワード(確認)' %>
   <%= form.password_field :password_confirmation %>
